argo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`linux`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
      middlewares:
        - name: stripprefix
          namespace: argocd
  tls:
    certResolver: default
